# analityk-dokumentow

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: block-zanonimizowane.sh
src/: config.py  extractor.py  report.py  ui.py
src/agents/: pipeline.py  prompts.py
src/anonymizer/: deanonymize.py  mappings.py  pipeline.py  regex_rules.py  semantic_ner.py  store.py
tests/: test_anonymization.py
